# internal/users/ports/openapi_api.gen.go
@@ -17,6 +17,9 @@ type ServerInterface interface {
 	// (GET /users/current)
 	GetCurrentUser(w http.ResponseWriter, r *http.Request)
 
+	// (POST /users/signin)
+	SignInUser(w http.ResponseWriter, r *http.Request)
+
 	// (POST /users/signup)
 	SignUpUser(w http.ResponseWriter, r *http.Request)
 }
@@ -38,6 +41,23 @@ func (siw *ServerInterfaceWrapper) GetCurrentUser(w http.ResponseWriter, r *http
 
 	var handler = func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetCurrentUser(w, r)
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler(w, r.WithContext(ctx))
+}
+
+// SignInUser operation middleware
+func (siw *ServerInterfaceWrapper) SignInUser(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{""})
+
+	var handler = func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.SignInUser(w, r)
 	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -179,6 +199,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/users/current", wrapper.GetCurrentUser)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/users/signin", wrapper.SignInUser)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/users/signup", wrapper.SignUpUser)
